--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Multimedia
 <footer>
 <p>COPYRIGHT 2018. ALL RIGHTS RESERVED</p>
 <ul>
-<li><a href ="#"><img src ="pic/facebook.png"></a  alt="Smiley face"></li>
+<li><a href ="#"><img src ="pic/facebook.png" alt="Smiley face"></a></li>
 <li><a href ="#"><img src ="pic/youtube-icon.png"  alt="Smiley face"></a></li>
 <li><a href ="#"><img src ="pic/twitter-icon1.png"  alt="Smiley face"></a></li>
 
