--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ margin-top: 30px;
 }
 
 nav li a {
-color:brown;
+color:green;
 text-decoration: none;
 }
 
@@ -77,7 +77,7 @@ margin-left: 8px;
 padding-right: 8px;
 }
 #lastSection ul a{
-color: burlywood;  
+color: green;  
 text-decoration: none;
 }
 footer {
