--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ margin-top: 30px;
 }
 
 nav li a {
-color:green;
+color:black;
 text-decoration: none;
 }
 
@@ -77,7 +77,7 @@ margin-left: 8px;
 padding-right: 8px;
 }
 #lastSection ul a{
-color: green;  
+color: black;  
 text-decoration: none;
 }
 footer {
@@ -97,7 +97,7 @@ li:hover {
  border-radius: 10px;
 }
 article a:hover{
-background-color:darkgreen;
+background-color:black;
 color: white;
 width: 200px;
 }
