--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height: 145px;
 }
 #lastSection ul {
 display: inline-blockl;
-color:darkblue;
+color:white;
 float: right;
 margin-left: 8px;
 padding-right: 8px;
@@ -92,7 +92,7 @@ width: 50px;
 
 }
 li:hover {
- background-color:darkblue;
+ background-color:green;
  font-size: 13pt;
  border-radius: 10px;
 }
