--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ margin-top: 30px;
 }
 
 nav li a {
-color:black;
+color:yellow;
 text-decoration: none;
 }
 
@@ -77,7 +77,7 @@ margin-left: 8px;
 padding-right: 8px;
 }
 #lastSection ul a{
-color: black;  
+color: yellow;  
 text-decoration: none;
 }
 footer {
@@ -92,7 +92,7 @@ width: 50px;
 
 }
 li:hover {
- background-color:green;
+ background-color:orange;
  font-size: 13pt;
  border-radius: 10px;
 }
