--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ margin-left: 8px;
 padding-right: 8px;
 }
 #lastSection ul a{
-color: yellow;  
+color: blue;  
 text-decoration: none;
 }
 footer {
