--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ float: right;
 nav li{
 display: inline-block;
 padding: 10px;
-background-color: crimson;
+background-color: LightGray;
 height: 25px;
 margin-top: 30px;
 
 }
 
 nav li a {
-color:yellow;
+color:Tomato;
 text-decoration: none;
 }
 
@@ -66,7 +66,7 @@ width: 200px;
 height: 200px;
 }
 #lastSection {
-background-color: crimson;
+background-color: LightGray;
 height: 145px;
 }
 #lastSection ul {
@@ -77,7 +77,7 @@ margin-left: 8px;
 padding-right: 8px;
 }
 #lastSection ul a{
-color: blue;  
+color: Tomato;  
 text-decoration: none;
 }
 footer {
