--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height: 145px;
 }
 #lastSection ul {
 display: inline-blockl;
-color:white;
+color:SlateBlue;
 float: right;
 margin-left: 8px;
 padding-right: 8px;
