--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ li:hover {
  border-radius: 10px;
 }
 article a:hover{
-background-color:black;
+background-color:MediumSeaGreen;
 color: SlateBlue;
 width: 200px;
 }
