--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ alert ("Welcome.. In Jerusalem Page")
 
 
 <ul>
-Life in Jerusalem
+ <span>Life in Jerusalem </span>
 <li><a href="#">Education</a></li>
 <li><a href="#">HealthCare</a></li>
 <li><a href="#">Settlement in Jerusalem</a></li>
@@ -169,14 +169,14 @@ Life in Jerusalem
 </ul>
 
 <ul>
-Quarters of Jerusalem
+ <span>Quarters of Jerusalem</span>
 <li><a href="#">Muslim Quarter</a></li>
 <li><a href="#">Christian Quarter</a></li>
 <li><a href="#">Moroccan Quarter</a></li>
 </ul>
     
 <ul>
-Gates of Jerusalem
+ <span>Gates of Jerusalem</span>
 <li><a href="#">Herod's Gate</a></li>
 <li><a href="#">Lions' Gate</a></li>
 <li><a href="#">Damascus Gate</a></li>
@@ -184,7 +184,7 @@ Gates of Jerusalem
     
 
 <ul>
-Multimedia 
+ <span>Multimedia </span>
 <li><a href="#">Videos</a></li>
 <li><a href="#">Pictures</a></li>
 <li><a href="#">Audios</a></li>
