--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ alert ("Welcome.. In Jerusalem Page")
 
 
 <ul>
+ <span>Life in Jerusalem </span>
 <li><a href="#">Education</a></li>
 <li><a href="#">HealthCare</a></li>
 <li><a href="#">Settlement in Jerusalem</a></li>
@@ -169,12 +170,14 @@ alert ("Welcome.. In Jerusalem Page")
 </ul>
 
 <ul>
+  <span>Multimedia </span>
 <li><a href="#">Muslim Quarter</a></li>
 <li><a href="#">Christian Quarter</a></li>
 <li><a href="#">Moroccan Quarter</a></li>
 </ul>
     
 <ul>
+ <span>Gates of Jerusalem</span>
 <li><a href="#">Herod's Gate</a></li>
 <li><a href="#">Lions' Gate</a></li>
 <li><a href="#">Damascus Gate</a></li>
@@ -182,6 +185,7 @@ alert ("Welcome.. In Jerusalem Page")
     
 
 <ul>
+  <span>Quarters of Jerusalem</span>
 <li><a href="#">Videos</a></li>
 <li><a href="#">Pictures</a></li>
 <li><a href="#">Audios</a></li>
